gp3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gp3
  template:
    metadata:
      labels:
        app: gp3
    spec:
      containers:
        - name: gp3
          image: wquintanilhadasilva/gp3:1.0
