gp3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gp3-service
spec:
  selector:
    app: gp3
  ports:
    - port: 3000
      targetPort: 8080
